--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">臺北市立動物園</string>
     <string name="no_closed_info">無休館資訊</string>
     <string name="click_to_go">點擊前往</string>
+    <string name="open_url">在網頁開啟</string>
     <string name="animal_data">動物資料</string>
     <string name="also_known">別名</string>
     <string name="distribution">分布地區</string>
