--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">臺北市立動物園</string>
+    <string name="network_error">發生錯誤，請檢查網路連線</string>
     <string name="no_closed_info">無休館資訊</string>
     <string name="click_to_go">點擊前往</string>
     <string name="open_url">在網頁開啟</string>
